<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="iItemBean"
            type="com.wantime.wbangapp.model.bind.IRealBindBean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/match_parent_style"
        android:background="@color/ui_search_bg_color">

        <LinearLayout
            android:id="@+id/login_input_layout"
            style="@style/ui_realname_input_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                style="@style/wrap_parent_style"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"
                android:src="@mipmap/shim_img" />

            <TextView
                style="@style/ui_realname_tip"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:text="@string/ui_realname_tip" />

            <LinearLayout
                style="@style/ui_realname_linear_layout"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/ui_realname_text"
                    android:text="@string/ui_realname_name" />

                <EditText
                    android:id="@+id/nameText"
                    style="@style/ui_realname_text_edit"
                    android:hint="@string/please_input_realname"
                    android:text="@={iItemBean.name}" />
            </LinearLayout>

            <LinearLayout
                style="@style/ui_realname_linear_layout"
                android:layout_marginTop="1px">

                <TextView
                    style="@style/ui_realname_text"
                    android:text="@string/ui_realname_code" />

                <EditText
                    android:id="@+id/codeText"
                    style="@style/ui_realname_text_edit"
                    android:hint="@string/please_input_code"
                    android:text="@={iItemBean.code}" />
            </LinearLayout>

            <Button
                android:id="@+id/mSubmitButton"
                style="@style/ui_real_input_button"
                android:text="@string/please_input_submit" />

            <LinearLayout
                style="@style/ui_realname_check_layout"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/mCheckBox"
                    style="@style/ui_realname_check_button" />

                <TextView
                    android:id="@+id/mCheckBoxTip"
                    style="@style/ui_realname_check_text" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>