<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/match_parent_style">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ui_message_alert_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleText"
            style="@style/ui_message_alert_layout_title"
            android:layout_marginBottom="5dp"
            android:text="@string/ui_create_child_title"
            app:layout_constraintBottom_toTopOf="@+id/descText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/descTitle"
            style="@style/ui_message_alert_layout_button"
            android:text="@string/ui_create_child_tips"
            android:textSize="@dimen/font_size_13"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/main_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/descText"
            app:layout_constraintTop_toTopOf="@+id/descText"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/descText"
            style="@style/ui_message_alert_create_child_edit"
            android:inputType="phone"
            android:layout_marginBottom="10dp"
            android:hint="@string/ui_create_child_tips_hint"
            app:layout_constraintBottom_toTopOf="@+id/rowLine"
            app:layout_constraintLeft_toRightOf="@+id/descTitle"
            app:layout_constraintRight_toRightOf="parent" />


        <View
            android:id="@+id/rowLine"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="40dp"
            android:background="@color/gray_line_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <View
            android:id="@+id/columnLine"
            android:layout_width="1px"
            android:layout_height="40dp"
            android:background="@color/gray_line_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/confirmText"
            style="@style/ui_message_alert_layout_button"
            android:text="@string/confirm"
            android:textColor="@color/main_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/columnLine"
            app:layout_constraintTop_toBottomOf="@+id/rowLine" />


        <TextView
            android:id="@+id/cancelText"
            style="@style/ui_message_alert_layout_button"
            android:text="@string/cancel"
            android:textColor="@color/main_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/columnLine"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rowLine" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
